Fix logo spacing on Safari

--- a/_sass/logo.scss
+++ b/_sass/logo.scss
@@ -4,7 +4,7 @@
 
 .logo__img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .logo__name {
